--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "teacss",
-  "version": "2.0.1",
+  "version": "3.0.0",
   "description": "Generate css from coffeescript with namespace and nested class names",
   "main": "lib/index.js",
   "repository": {
@@ -8,6 +8,7 @@
     "url": "git+https://github.com/mark-hahn/teacss.git"
   },
   "keywords": [
+    "less",
     "css",
     "teacup",
     "namespace",
